--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -61,4 +61,12 @@
         android:layout_height="match_parent"
         android:layout_marginTop="112dp" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:translationX="180dp"
+        android:translationY="360dp" />
+
 </FrameLayout>
