--- a/app/src/main/res/layout/activity_manga_detail.xml
+++ b/app/src/main/res/layout/activity_manga_detail.xml
@@ -111,11 +111,33 @@
                         android:textSize="16sp" />
 
                 </LinearLayout>
+
             </LinearLayout>
 
-            <androidx.recyclerview.widget.RecyclerView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btn_read"
+                    android:layout_width="210dp"
+                    android:layout_height="94dp"
+                    android:layout_weight="0"
+                    android:drawableEnd="@drawable/read"
+                    android:text="閱讀"
+                    android:textSize="20sp" />
+
+                <Button
+                    android:id="@+id/btn_like"
+                    android:layout_width="wrap_content"
+                    android:layout_height="97dp"
+                    android:layout_weight="0"
+                    android:drawableEnd="@drawable/like"
+                    android:text="收藏"
+                    android:textSize="20sp" />
+
+            </LinearLayout>
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
