--- a/app/src/main/res/layout/fragment_like.xml
+++ b/app/src/main/res/layout/fragment_like.xml
@@ -36,7 +36,7 @@
         android:layout_marginTop="64dp">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/like_recycleview"
+            android:id="@+id/history_recycleview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="64dp" />
