--- a/app/src/main/res/layout/activity_manga_detail.xml
+++ b/app/src/main/res/layout/activity_manga_detail.xml
@@ -9,7 +9,7 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/detail_toolbar"
-        android:layout_width="0dp"
+        android:layout_width="412dp"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:backgroundTint="#03A9F4"
@@ -35,7 +35,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:fillViewport="true"
-        android:overScrollMode="never"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,6 +43,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:nestedScrollingEnabled="false"
             android:orientation="vertical">
 
             <LinearLayout
@@ -54,17 +54,15 @@
                 <ImageView
                     android:id="@+id/detail_cover"
                     android:layout_width="162dp"
-                    android:layout_height="222dp"
+                    android:layout_height="209dp"
                     android:layout_marginLeft="12dp"
-                    android:layout_marginTop="12dp"
-                    android:layout_marginRight="12dp" />
+                    android:layout_marginTop="12dp" />
 
                 <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="209dp"
                     android:layout_marginTop="12dp"
                     android:layout_marginRight="12dp"
-                    android:layout_weight="1"
                     android:orientation="vertical">
 
                     <TextView
@@ -72,9 +70,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="12dp"
+                        android:layout_marginTop="12dp"
                         android:layout_marginRight="12dp"
-                        android:maxLines="3"
-                        android:textSize="18sp" />
+                        android:textSize="20sp" />
 
                     <TextView
                         android:id="@+id/detail_author"
@@ -86,7 +84,7 @@
                         android:textSize="16sp" />
 
                     <TextView
-                        android:id="@+id/detail_region"
+                        android:id="@+id/detail_area"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="12dp"
@@ -116,14 +114,31 @@
 
             </LinearLayout>
 
-            <WebView
-                android:id="@+id/manga_chapter"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="78dp"
-                android:overScrollMode="never" />
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btn_read"
+                    android:layout_width="210dp"
+                    android:layout_height="94dp"
+                    android:layout_weight="0"
+                    android:drawableEnd="@drawable/read"
+                    android:text="閱讀"
+                    android:textSize="20sp" />
+
+                <Button
+                    android:id="@+id/btn_like"
+                    android:layout_width="wrap_content"
+                    android:layout_height="97dp"
+                    android:layout_weight="0"
+                    android:drawableEnd="@drawable/like"
+                    android:text="收藏"
+                    android:textSize="20sp" />
+
+            </LinearLayout>
+
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
