--- a/app/src/main/res/layout/fragment_like.xml
+++ b/app/src/main/res/layout/fragment_like.xml
@@ -15,7 +15,7 @@
         android:theme="?attr/actionBarTheme">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tv_like"
             android:layout_width="54dp"
             android:layout_height="34dp"
             android:layout_marginStart="24dp"
