--- a/app/src/main/res/layout/activity_manga_detail.xml
+++ b/app/src/main/res/layout/activity_manga_detail.xml
@@ -61,7 +61,7 @@
 
                 <LinearLayout
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="178dp"
                     android:layout_marginTop="12dp"
                     android:layout_marginRight="12dp"
                     android:layout_weight="1"
@@ -116,11 +116,36 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="76dp"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btn_read"
+                    android:layout_width="203dp"
+                    android:layout_height="80dp"
+                    android:layout_weight="0"
+                    android:drawableEnd="@drawable/read"
+                    android:text="閱讀"
+                    android:textSize="24sp" />
+
+                <Button
+                    android:id="@+id/btn_like"
+                    android:layout_width="208dp"
+                    android:layout_height="80dp"
+                    android:layout_weight="0"
+                    android:drawableEnd="@drawable/like"
+                    android:text="收藏"
+                    android:textSize="24sp" />
+
+            </LinearLayout>
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/chapter_recyclerview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="75dp" />
+                android:layout_marginTop="30dp" />
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
