--- a/app/src/main/res/layout/activity_manga_detail.xml
+++ b/app/src/main/res/layout/activity_manga_detail.xml
@@ -62,7 +62,7 @@
 
                 <LinearLayout
                     android:layout_width="0dp"
-                    android:layout_height="178dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
                     android:layout_marginRight="12dp"
                     android:layout_weight="1"
